--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,22 @@
 <html lang=ja>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="/static/css/bulma.css">
     </head>
     <body>
-        <p>初めてのFlaskサーバー</p>
+        <section class="section">
+            <div class="container" id="app">
+                <div class="columns">
+                    <div class="column">
+                        <h1 class="title">{{ title }}</h1>
+                        <div class="is-full">{{ content }}</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <script src="/static/js/vue.min.js"></script>
+        <script src="/static/js/axios.min.js"></script>
+        <script src="/static/js/main.js"></script>
     </body>
 </html>
