--- a/html/login.html
+++ b/html/login.html
@@ -49,6 +49,9 @@
                     axios.post('/api/login', new FormData(document.getElementById('login-form')))
                     .then(function(res) {
                         app.message = '<div class="notification is-success"><p>"' + res.data.user + '"としてログイン成功しました</p></div>';
+                        setTimeout(function() { // 1.5秒後トップページにリダイレクト
+                            location.href = '/';
+                        }, 1500);
                     })
                     .catch(function(err) {
                         app.message = '<div class="notification is-warning"><p>ログインできませんでした</p><p>ユーザー名かパスワードが違います</p></div>';
